www/sizes_n_stuff.css
/* CSS for the queen speach dashboard! */
/* Neutralize and formatting */
html, body {
  width: 100%;
  height: 100%;
  min-height: 100vh !important;
}

/* main wrapper */
.content-wrapper{
  min-height: 100vh !important;
}

/* Text */
/* > Titles */
h2, h3{
  margin: 1vh 0;
  clear: both;
}

/* > p/span */
.help-block{
  float: left;
  font-style: italic;
  white-space: break-spaces;
  clear: both;
}

/* Shiny dashboard */
/* > Wrapper */
.sidebar-collapse .content-wrapper, .sidebar-collapse .main-footer,
.sidebar-collapse .right-side{
  margin-left: 45px;
}

/* > Navbar */
.skin-blue .main-header .logo{
  display: none;
}

.skin-blue .main-header .navbar .sidebar-toggle,
.skin-blue .main-header .navbar .sidebar-toggle:hover{
  width: 100%;
}

.skin-blue .main-header .navbar{
  float: left;
  margin: 0;
  width: 230px;
  -webkit-transition: width .3s ease-in-out;
  -moz-transition: width .3s ease-in-out;
  -o-transition: width .3s ease-in-out;
  transition: width .3s ease-in-out;
}

.sidebar-collapse.skin-blue .main-header .navbar {
  width: 45px;
}

/* > Sidebar */
.left-side, .main-sidebar{
  float: left;
  height: 100%;
}

.sidebar-collapse .left-side, .sidebar-collapse .main-sidebar{
    -webkit-transform: translate(0,0);
    -ms-transform: translate(0,0);
    -o-transform: translate(0,0);
    transform: translate(0,0);
    width: 45px;
}

.sidebar{
  float: left;
  height: 100%;
  width: 100%;
}

.left-side, .main-sidebar{
  padding-top: 52px;
}

.sidebar-menu{
  float: left;
  height: 100%;
  width: 100%;
}

.sidebar-collapse .sidebar-menu>li{
  overflow: hidden;
}

.skin-blue .sidebar-menu>li>a{
  padding: 10px;
}

.skin-blue .sidebar-menu>li>a span{
  margin-left: 8px;
}

.skin-blue .sidebar-menu .help-block{
  padding: 0 15px;
}

#sidebar-input{
  float: left;
  width: calc(100% - 3px);
  -webkit-transition: -webkit-transform .3s ease-in-out,width 0s ease-in-out;
  -moz-transition: -moz-transform .3s ease-in-out,width 0s ease-in-out;
  -o-transition: -o-transform .3s ease-in-out,width 0s ease-in-out;
  transition: transform .3s ease-in-out,width 0s ease-in-out;
  -webkit-transform: translate(-0,0);
  -ms-transform: translate(-0,0);
  -o-transform: translate(-0,0);
  transform: translate(-0,0);
}

.sidebar-collapse #sidebar-input {
  visibility: hidden;
  width: 0;
  height: 0;
  overflow: hidden;
  -webkit-transform: translate(-270px,0);
  -ms-transform: translate(-270px,0);
  -o-transform: translate(-270px,0);
  transform: translate(-270px,0);
}

#sidebar-input h3{
  padding: 0 15px;
  margin-bottom: 0;
}

/* > less */
.row{
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  margin-bottom: 2vh;
}

.row:last-child{
  margin-bottom: 0;
}
/* > Selectize */
.selectize-input{
  overflow: auto !important;
  max-height: 4em;
}

/* > Columns */
.col-sm-12{
  padding: 0;
}

div .col-sm-1:first-child, div .col-sm-2:first-child, div .col-sm-3:first-child,
div .col-sm-4:first-child, div .col-sm-5:first-child, div .col-sm-6:first-child,
div .col-sm-7:first-child, div .col-sm-8:first-child, div .col-sm-9:first-child,
div .col-sm-10:first-child, div .col-sm-11:first-child {
  padding-left: 0;
}

div .col-sm-1:last-child, div .col-sm-2:last-child, div .col-sm-3:last-child,
div .col-sm-4:last-child, div .col-sm-5:last-child, div .col-sm-6:last-child,
div .col-sm-7:last-child, div .col-sm-8:last-child, div .col-sm-9:last-child,
div .col-sm-10:last-child, div .col-sm-11:last-child {
  padding-right: 0;
}

.box {
  padding: 1vh 1.5vw;
  border: 3px solid #000;
  margin-bottom: 2vh;
}

.box .box {
  margin-right: 2%;
  border: 2px solid #CCC;
}

/* > Shiny input */
.shiny-input-container:not(.shiny-input-container-inline){
  float: left;
}

/* > Shiny tabs */
.nav-tabs-custom>.tab-content{
  float: left;
  width: 100%;
}

/* Infobox */
#wiki_infobox{
  max-height: 100vh;
  overflow: auto;
}

.infobox{
  width: 100% !important;
}

.hlist{
  display: none;
}

/* Topic Model */
#topicVis{
  position: relative;
  width: 100%;
  overflow-x: auto;
}

/* Sentiment tab */
#shiny-tab-sentiment .form-group{
  clear: left;
}

